// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 0;
}

.c2 {
  margin-bottom: -8px;
  margin-right: -8px;
  width: 4px;
  color: #17fe17;
  width: 8px;
  height: 8px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  background-image: linear-gradient(45deg,transparent 50%,#12cb12 50%);
  position: absolute;
  bottom: 0;
}

.c4 {
  margin-left: -8px;
  width: 18px;
  color: #17fe17;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  background-color: #17fe17;
  border-radius: 0 2px 2px 0;
  -webkit-transform: skew(-14deg);
  -ms-transform: skew(-14deg);
  transform: skew(-14deg);
  position: relative;
  z-index: 1;
}

.c3 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 4px;
  color: #FFF;
  background-color: #17fe17;
  font-size: 12px;
  border-radius: 0 0 2px 0;
  color: #FFF;
  background-color: #17fe17;
  z-index: 2;
}

.c1 {
  position: relative;
}

@media screen and (min-width:32em) {
  .c0 {
    margin-left: -8px;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    padding-top: 8px;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    padding-bottom: 8px;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    padding-left: 16px;
  }
}

@media screen and (max-width:31.99em) {
  .c1 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="green"
      width="4px"
    />
  </div>
  <div
    className="c3"
    color="white"
  />
  <div
    className="c4"
    color="green"
    width="18px"
  />
</div>
`;

exports[`Flag renders with hex value as bg color 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 0;
  width: 256px;
}

.c2 {
  margin-bottom: -8px;
  margin-right: -8px;
  width: 4px;
  color: #085397;
  width: 8px;
  height: 8px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  background-image: linear-gradient(45deg,transparent 50%,rgba(0,0,0,0.5) 50%), linear-gradient(45deg,transparent 50%,#085397 50%);
  position: absolute;
  bottom: 0;
}

.c4 {
  margin-left: -8px;
  width: 18px;
  color: #085397;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  background-color: #085397;
  border-radius: 0 2px 2px 0;
  -webkit-transform: skew(-14deg);
  -ms-transform: skew(-14deg);
  transform: skew(-14deg);
  position: relative;
  z-index: 1;
}

.c3 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 4px;
  color: #FFF;
  background-color: #085397;
  font-size: 12px;
  border-radius: 0 0 2px 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: #FFF;
  background-color: #085397;
  z-index: 2;
}

.c1 {
  position: relative;
}

@media screen and (min-width:32em) {
  .c0 {
    margin-left: -8px;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    padding-top: 8px;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    padding-bottom: 8px;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    padding-left: 16px;
  }
}

@media screen and (max-width:31.99em) {
  .c1 {
    display: none;
  }
}

<div
  className="c0"
  width={256}
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="#085397"
      width="4px"
    />
  </div>
  <div
    className="c3"
    color="white"
  />
  <div
    className="c4"
    color="#085397"
    width="18px"
  />
</div>
`;

exports[`Flag renders with theme color as bg color 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 0;
  width: 256px;
}

.c3 {
  margin-bottom: -8px;
  margin-right: -8px;
  width: 4px;
  color: purple;
  width: 8px;
  height: 8px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  background-image: linear-gradient(45deg,transparent 50%,rgba(0,0,0,0.5) 50%), linear-gradient(45deg,transparent 50%,purple 50%);
  position: absolute;
  bottom: 0;
}

.c5 {
  margin-left: -8px;
  width: 18px;
  color: purple;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  background-color: purple;
  border-radius: 0 2px 2px 0;
  -webkit-transform: skew(-14deg);
  -ms-transform: skew(-14deg);
  transform: skew(-14deg);
  position: relative;
  z-index: 1;
}

.c4 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 4px;
  color: #FFF;
  background-color: purple;
  font-size: 12px;
  border-radius: 0 0 2px 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: #FFF;
  background-color: purple;
  z-index: 2;
}

.c2 {
  position: relative;
}

.c0 {
  color: #131e1a;
  font-family: 'Source Sans Pro',Roboto,'Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5;
  font-weight: 400;
}

.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  font-family: Roboto,'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

@media screen and (min-width:32em) {
  .c1 {
    margin-left: -8px;
  }
}

@media screen and (min-width:32em) {
  .c4 {
    padding-top: 8px;
  }
}

@media screen and (min-width:32em) {
  .c4 {
    padding-bottom: 8px;
  }
}

@media screen and (min-width:32em) {
  .c4 {
    padding-left: 16px;
  }
}

@media screen and (max-width:31.99em) {
  .c2 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    width={256}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        color="purple"
        width="4px"
      />
    </div>
    <div
      className="c4"
      color="white"
    />
    <div
      className="c5"
      color="purple"
      width="18px"
    />
  </div>
</div>
`;

exports[`Flag renders with width prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 0;
  width: 256px;
}

.c2 {
  margin-bottom: -8px;
  margin-right: -8px;
  width: 4px;
  color: #17fe17;
  width: 8px;
  height: 8px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  background-image: linear-gradient(45deg,transparent 50%,#12cb12 50%);
  position: absolute;
  bottom: 0;
}

.c4 {
  margin-left: -8px;
  width: 18px;
  color: #17fe17;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  background-color: #17fe17;
  border-radius: 0 2px 2px 0;
  -webkit-transform: skew(-14deg);
  -ms-transform: skew(-14deg);
  transform: skew(-14deg);
  position: relative;
  z-index: 1;
}

.c3 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 4px;
  color: #FFF;
  background-color: #17fe17;
  font-size: 12px;
  border-radius: 0 0 2px 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  color: #FFF;
  background-color: #17fe17;
  z-index: 2;
}

.c1 {
  position: relative;
}

@media screen and (min-width:32em) {
  .c0 {
    margin-left: -8px;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    padding-top: 8px;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    padding-bottom: 8px;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    padding-left: 16px;
  }
}

@media screen and (max-width:31.99em) {
  .c1 {
    display: none;
  }
}

<div
  className="c0"
  width={256}
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="green"
      width="4px"
    />
  </div>
  <div
    className="c3"
    color="white"
  />
  <div
    className="c4"
    color="green"
    width="18px"
  />
</div>
`;
